# TetsAdept

AdeptTest/: CMakeLists.txt  readme.txt  test.txt
AdeptTest/cmake/: FindFirebird.cmake
AdeptTest/src/: BDController.cpp  BDController.h  FIleWriter.h  FileReader.cpp  FileReader.h  FileWriter.cpp  Grouper.cpp  Grouper.h  Objects.h  main.cpp
